2014-12-22  Tassilo Horn  <tsdh@gnu.org>

	* doc/changes.texi: Document addition of LaTeX-command-section and
	forward/backward search enhancements with Evince.

	* latex.el (auto-mode-alist): Add latex-mode association for HeVeA
	files.

2014-12-21  Tassilo Horn  <tsdh@gnu.org>

	* tex.el (TeX-parse-macro): Enclose arg in
	LaTeX-default-verb-delimiter if macro is in
	LaTeX-verbatim-macros-with-delims and there's only one argument.
	(TeX-auto-store): Check if LaTeX-verbatim-environments,
	LaTeX-verbatim-macros-with-delims, and
	LaTeX-verbatim-macros-with-braces are bound before using them.

	* style/minted.el (LaTeX-minted-newminted-regexp)
	(LaTeX-minted-newmint-regexp, LaTeX-minted-newmintinline-regexp)
	(LaTeX-minted-newmintedfile-regexp, LaTeX-minted-auto-cleanup):
	Extend to recognize optional env/macro name.
	("minted"): Add \newminted, \newmint, \newmintinline, and
	\newmintedfile macros.

2014-12-20  Tassilo Horn  <tsdh@gnu.org>

	* tex.el (TeX-auto-store): Write LaTeX-verbatim-*-local variables
	to auto file to make them document-local.

	* style/minted.el (LaTeX-minted-auto-cleanup): Recognize macros
	generated by \newmint, \newmintinline, and \newmintedfile, too.

	* tex.el (TeX-evince-sync-view): Encode URI with `url-encode-url'.

2014-12-19  Tassilo Horn  <tsdh@gnu.org>

	* style/minted.el: New style.

	* Makefile.in (STYLESRC): Add style/minted.el.

	* latex.el (LaTeX-env-args): Bind exit-mark if its not bound
	already.
	(LaTeX-verbatim-regexp): Make variable obsolete.
	(LaTeX-verbatim-regexp): New function which computes a regexp of
	verbatim environments from LaTeX-verbatim-environments.
	(LaTeX-indent-calculate, LaTeX-indent-calculate-last): Use the
	function LaTeX-verbatim-regexp instead of the variable.

	* style/listings.el ("listings"): Don't modify the now obsolete
	LaTeX-verbatim-regexp.

	* style/fancyvrb.el ("fancyvrb"): Don't modify the now obsolete
	LaTeX-verbatim-regexp.

	* style/beamer.el ("beamer"): Don't modify the now obsolete